# sentinel_dragon-

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
sentinel_dragon/: __init__.py
tests/: test_basic.py  test_hello.py
