[tool.poetry]
name = "sentinel-dragon"
version = "0.1.0"
description = ""
authors = ["umairyaseen77 <113756823+umairyaseen77@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "sentinel_dragon"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.extras]
playwright = ["playwright"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
black = "^24.4"
ruff = "^0.4"
pre-commit = "^3.6"
playwright = { version = "^1.43", optional = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

